--- a/server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,10 @@
     "name": "fair.jwt.expiration",
     "type": "java.lang.String",
     "description": "A description for 'fair.jwt.expiration'"
+  },
+  {
+    "name": "spring.jpa.hibernate.naming-strategy",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.jpa.hibernate.naming-strategy'"
   }
 ]}
