--- a/GuildAPI/src/main/resources/application.properties
+++ b/GuildAPI/src/main/resources/application.properties
@@ -14,6 +14,6 @@ spring.jpa.properties.hibernate.format_sql=true
 # JWT Configuration
 fair.jwt.secret=rm'!@N=Ke!~p8VTA2ZRK~nMDQX5Uvm!m'D&]{@Vr?G;2?XhbC:Qa#9#eMLN\}x3?JR3.2zr~v)gYF^8\:8>:XfB:Ww75N/emt9Yj[bQMNCWwW\J?N,nvH.<2\.r~w]*e~vgak)X"v8H`MH/7"2E`,^k@n<vE-wD3g9JWPy;CrY*.Kd2_D])=><D?YhBaSua5hW%{2]_FVXzb9`8FH^b[X3jzVER&:jw2<=c38=>L/zBq`}C6tT*cCSVC^c]-L}&/
 fair.jwt.expiration=86400000
-grape.jwt.issuer=API to fair management
+fair.jwt.issuer=API to fair management
 
 server.port=8000
