--- a/FeedBackAPI/src/main/resources/application.properties
+++ b/FeedBackAPI/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 server.port=8080
+
+spring.application.name=feedback
+
+eureka.client.service-url.defaultZone: http://localhost:8761/eureka/
