--- a/GuildAPI/src/main/resources/application.properties
+++ b/GuildAPI/src/main/resources/application.properties
@@ -17,3 +17,7 @@ fair.jwt.expiration=86400000
 fair.jwt.issuer=API to fair management
 
 server.port=8000
+
+spring.application.name=guild
+
+eureka.client.service-url.defaultZone: http://localhost:8761/eureka/
