--- a/FeedBackAPI/src/main/resources/application.properties
+++ b/FeedBackAPI/src/main/resources/application.properties
@@ -14,5 +14,6 @@ spring.jpa.properties.hibernate.format_sql=true
 server.port=8080
 
 spring.application.name=feedback
+server.servlet.context-path=/feedback
 
 eureka.client.service-url.defaultZone: http://localhost:8761/eureka/
