--- a/GuildAPI/src/main/resources/application.properties
+++ b/GuildAPI/src/main/resources/application.properties
@@ -16,8 +16,9 @@ fair.jwt.secret=rm'!@N=Ke!~p8VTA2ZRK~nMDQX5Uvm!m'D&]{@Vr?G;2?XhbC:Qa#9#eMLN\}x3?
 fair.jwt.expiration=86400000
 fair.jwt.issuer=API to fair management
 
-server.port=8000
+server.port=8088
 
 spring.application.name=guild
+server.servlet.context-path=/guild
 
 eureka.client.service-url.defaultZone: http://localhost:8761/eureka/
