--- a/CloudGateway/pom.xml
+++ b/CloudGateway/pom.xml
@@ -7,17 +7,21 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.1.4</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath />
 	</parent>
+	
 	<groupId>br.com.cloud.gateway</groupId>
 	<artifactId>CloudGateway</artifactId>
 	<version>0.0.1</version>
 	<name>CloudGateway</name>
+	
 	<description>Demo project for Spring Boot</description>
+	
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2022.0.4</spring-cloud.version>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -35,7 +39,9 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
 	<dependencyManagement>
+		
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
@@ -45,6 +51,7 @@
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
+		
 	</dependencyManagement>
 
 	<build>
