--- a/EurekaServer/pom.xml
+++ b/EurekaServer/pom.xml
@@ -6,17 +6,20 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.1.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
+	
 	<groupId>br.com.eureka.server</groupId>
 	<artifactId>EurekaServer</artifactId>
 	<version>0.0.1</version>
 	<name>EurekaServer</name>
 	<description>Demo project for Spring Boot</description>
+	
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2022.0.4</spring-cloud.version>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -29,7 +32,9 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
 	<dependencyManagement>
+		
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
@@ -39,6 +44,7 @@
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
+		
 	</dependencyManagement>
 
 	<build>
