--- a/GuildAPI/pom.xml
+++ b/GuildAPI/pom.xml
@@ -102,7 +102,13 @@
 		    <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		    <version>4.0.3</version>
 		</dependency>
-
+		
+		<!-- https://mvnrepository.com/artifact/com.twilio.sdk/twilio -->
+		<dependency>
+		    <groupId>com.twilio.sdk</groupId>
+		    <artifactId>twilio</artifactId>
+		    <version>10.0.0-rc.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
