--- a/EurekaServer/Dockerfile
+++ b/EurekaServer/Dockerfile
@@ -1,6 +1,6 @@
-FROM openjdk:FROM openjdk:openjdk-17-jre
+FROM openjdk:openjdk-17-jre
 RUN addgroup -S spring && adduser -S spring -G spring
 USER spring:spring
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-Xmx512m","-Dserver.port=8088","-jar","/app.jar"]
+ENTRYPOINT ["java","-Xmx512m","-Dserver.port=8761","-jar","/app.jar"]
